# hpapiwrapper

./: CONTRIBUTING.md  README.md  pyproject.toml
Final_Project/hpapiwrapper/: CHANGELOG.md  LICENSE
Final_Project/hpapiwrapper/docs/: Makefile  example.ipynb  make.bat
docs/: conf.py
src/hpapiwrapper/: __init__.py  hpapiwrapper.py
tests/: test_hpapiwrapper.py
